Repositorytests made for all classes. Changed a repository class since project_db. was hardcoded for no reason, so a test would fail. Also changed from get(0) to getFirst since IntelliJ is mad at get(0).